# android_practice

./: .gitignore
MyPractice/: .gitignore  README.MK  build.gradle  build.gradle.kts  copy.sh  copy_source26.sh  copy_source27.sh  gradle.properties  import-summary.txt  maindexlist.txt  manaul.txt  release-jks.properties  release.keystore  settings.gradle
MyPractice/app/: build.gradle  build.gradle.kts  build.gradle.kts.orig  proguard-project.txt
MyPractice/app/src/main/: AndroidManifest.xml
MyPractice/app/src/main/res/color/: drawable_color_state.xml
MyPractice/app/src/main/res/drawable/: avatar_light_interact_circle_bg.xml  layer_list_bitmap.xml  layer_list_loading.xml  overlay_window_bg.xml
MyPractice/app/src/main/res/drawable-hdpi/: bg.xml
MyPractice/app/src/main/res/drawable-v21/: ripple_1.xml  ripple_2.xml  ripple_3.xml
MyPractice/app/src/main/res/layout/: activitiy_weixin_share.xml  activity_api_launch_item.xml  activity_autogridlayout.xml  activity_binder.xml  activity_broadcast.xml  activity_camera2.xml  activity_camera2_preview.xml  activity_card_view.xml  activity_clippath.xml  activity_clonexavator_compose_layout.xml  activity_color_matrix.xml  activity_coroutines1.xml  activity_coroutines2.xml  activity_cpu.xml  activity_double_seek_bar.xml  activity_douyin_act.xml  activity_draghelper.xml  activity_drawable_layout.xml  activity_drawable_resource.xml  activity_drawarcbypaint.xml  activity_drawer.xml  activity_drawingboard.xml  activity_empty_back.xml  activity_fitsystem_window.xml  activity_flower.xml  activity_fragment_lifecycle.xml  activity_framelayout_test_item_view.xml  activity_framelayout_test_view.xml  activity_framelayouttest_layout.xml  activity_fresco_webp_view.xml  activity_gaussian.xml  activity_glide.xml  activity_gradient_view.xml  activity_imageview.xml  activity_imageview_matrix.xml  activity_kotlin_delegate.xml  activity_lampcord.xml  activity_layerlist.xml  activity_memory.xml  activity_memory_doudong.xml  (+37 more)
MyPractice/app/src/main/res/menu/: menu_empty_back.xml  menu_translate_and_rotation.xml
MyPractice/app/src/main/res/values/: attrs.xml  color.xml  dimens.xml  ids.xml  strings.xml  styles.xml
MyPractice/app/src/main/res/values-v14/: styles.xml
MyPractice/app/src/main/res/xml/: example_appwidget_info.xml  example_appwidget_info_2.xml
MyPractice/buildSrc/: build.gradle.kts  settings.gradle.kts
MyPractice/buildSrc/src/main/kotlin/: Dependencies.kt  my-android-library.gradle.kts  tasks.kt
MyPractice/gradle/: base_custom_utils.gradle.kts  deps.gradle.kts  library.gradle  ndk.gradle.kts  tasks.gradle.kts
MyPractice/gradle/wrapper/: gradle-wrapper.properties
MyPractice/libavd/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
MyPractice/libavd/src/main/: AndroidManifest.xml
MyPractice/libavd/src/main/cpp/: bytevoice_creator.h  bytevoice_vad.h  com_demon_yu_avd_WebVadHelper.c  com_demon_yu_avd_WebVadHelper.h  vad.cc  vad_core.c  vad_filterbank.c  vad_gmm.c  vad_sp.c  webrtc_vad.c
MyPractice/libavd/src/main/cpp/common_audio/signal_processing/: auto_correlation.c  dot_product_with_scale.cc  downsample_fast.c  spl_init.c  splitting_filter.c
MyPractice/libavd/src/main/cpp/common_audio/signal_processing/include/: signal_processing_library.h  spl_inl.h
MyPractice/libavd/src/main/cpp/include/: vad.h
MyPractice/libavd/src/main/cpp/rtc_base/: checks.cc  checks.h  logging.cc  logging.h  platform_thread_types.cc  time_utils.h
MyPractice/libavd/src/main/cpp/rtc_base/strings/: string_builder.h
MyPractice/libavd/src/main/cpp/spl_sqrt_floor/: spl_sqrt_floor.c
MyPractice/libavd/src/main/cpp/system/system_wrappers/source/: cpu_features.cc
MyPractice/libavd/src/main/java/com/demon/yu/avd/: AudioRecordManager.java  VadActivity.kt  WebVadHelper.java
MyPractice/libgaussia/: CMakeLists.txt  build.gradle  build.gradle.kts  build.gradle.kts.orig  proguard-rules.pro
MyPractice/libgaussia/src/androidTest/java/com/demon/yu/lib/gausiia/: ExampleInstrumentedTest.java
MyPractice/libgaussia/src/main/: AndroidManifest.xml
MyPractice/libgaussia/src/main/cpp/: AndroidBlurInfo.c  AndroidBlurInfo.h  TestRefAndSp.cpp  TestRefAndSp.h  com_demon_yu_lib_gausiia_Guassia.h  com_demon_yu_lib_gaussian_GaussianHelper.c  com_demon_yu_lib_gaussian_GaussianHelper.h  com_demon_yu_lib_gaussian_StudentNative.c  com_demon_yu_lib_gaussian_StudentNative.h  gaussia.cpp  gaussian_logger.c  gaussian_logger.h  memory.h  student.c  student.h
MyPractice/libgaussia/src/main/java/com/bytedance/: Test.java
MyPractice/libgaussia/src/main/java/com/demon/yu/lib/gausiia/: Guassia.java
MyPractice/libgaussia/src/main/java/com/demon/yu/lib/gaussian/: CStandardActivity.kt  GaussianActivity.kt  GaussianHelper.java  StudentNative.java
MyPractice/libgaussia/src/main/res/layout/: activity_cstandard.xml  activity_gaussian.xml
MyPractice/libgaussia/src/main/res/values/: strings.xml
MyPractice/libgaussia/src/test/java/com/demon/yu/lib/gausiia/: ExampleUnitTest.java
MyPractice/manual/: README.MK
MyPractice/processor/: build.gradle
MyPractice/processor-annotation/: build.gradle
MyPractice/processor-annotation/src/main/java/com/example/: Factory.java
MyPractice/processor/src/main/java/com/example/: FactoryManager.java  (+2 more)
MyPractice/source/23/: IActivityManager.java  MessageQueue.java  PhoneWindow.java  View.java  ViewGroup.java  ViewRootImpl.java  Window.java  WindowManagerGlobal.java
MyPractice/source/26/: IWindow.aidl
(+266 files in other folders)
